--- a/web/package.json
+++ b/web/package.json
@@ -10,13 +10,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "anychart-react": "^1.4.1",
     "axios": "^1.0.0",
     "bootstrap": "^5.2.2",
+    "chart.js": "^3.9.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^7.6.1",
     "mdb-react-ui-kit": "^4.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.1",
     "react-icons": "^4.4.0",
